--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e5e88d"
+    android:background="#088F8F"
     android:onClick="AboutMeLink"
     tools:context=".MainActivity">
 
@@ -16,7 +16,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="301dp"
         android:layout_marginBottom="15dp"
-        android:text="About me"
+        android:text="@string/about_me"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="79dp"
-        android:text="Gold Weight(gram)"
+        android:text="Gold weight(g)"
         android:textColor="#000000"
         android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
         android:layout_height="21dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="44dp"
-        android:text="Current gold value/gram"
+        android:text="Current gold value"
         android:textColor="#000000"
         android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="parent"
