--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e5e88d"
+    android:background="#088F8F"
     tools:context=".SplashScreen">
 
     <ImageView
@@ -52,7 +52,7 @@
         android:layout_width="440dp"
         android:layout_height="19dp"
         android:layout_marginBottom="10dp"
-        android:text="Copyright 2021. All rights reserved."
+        android:text="Copyright 2022. All rights reserved."
         android:textAlignment="center"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
